--- a/LABS/.settings/org.talend.repository.prefs
+++ b/LABS/.settings/org.talend.repository.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-repository.project.branch=branches/V1.2
+repository.project.branch=master
 repository.project.id=enc\:migration.token.encryption.key\:QUziE/kkgQy2iP8nnAz2HfNID2vsujqqmBJoWSVymW1vvyrgDo4aESM\=
